subwcrev is incompatible with a git-based repository. removing its use and replacing it with the standard wild card usage to increment to revision number of the version

--- a/DDay.iCal.Test/DDay.iCal.Test.csproj
+++ b/DDay.iCal.Test/DDay.iCal.Test.csproj
@@ -571,6 +571,6 @@
   </Target>
   -->
   <PropertyGroup>
-    <PreBuildEvent>$(SolutionDir)subwcrev.exe $(ProjectDir). $(ProjectDir)Properties\AssemblyInfo.cs.template $(ProjectDir)Properties\AssemblyInfo.cs</PreBuildEvent>
+    <!--<PreBuildEvent>$(SolutionDir)subwcrev.exe $(ProjectDir). $(ProjectDir)Properties\AssemblyInfo.cs.template $(ProjectDir)Properties\AssemblyInfo.cs</PreBuildEvent>-->
   </PropertyGroup>
 </Project>
