--- a/DDay.iCal.Test/DDay.iCal.Test.csproj
+++ b/DDay.iCal.Test/DDay.iCal.Test.csproj
@@ -337,7 +337,10 @@
     <None Include="Calendars\Recurrence\DailyByDay1.ics">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="Calendars\Recurrence\WeeklyInterval1.ics">
+	<None Include="Calendars\Recurrence\WeeklyInterval1.ics">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Calendars\Recurrence\WeeklyWeekStartsLastYear.ics">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="Calendars\Recurrence\Monthly1.ics">
