--- a/DDay.Collections/DDay.Collections/DDay.Collections.csproj
+++ b/DDay.Collections/DDay.Collections/DDay.Collections.csproj
@@ -71,8 +71,8 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
+    <!--  <Reference Include="Microsoft.CSharp" />
+    --><Reference Include="System.Data" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
