--- a/Makefile.include
+++ b/Makefile.include
@@ -62,14 +62,15 @@ EXTRA_DIST += $(build_sources) $(build_resx_files) $(build_others_files) $(ASSEM
 CLEANFILES += $(ASSEMBLY) $(ASSEMBLY).mdb $(BINARIES) $(build_resx_resources) $(build_satellite_assembly_list)
 DISTCLEANFILES = $(GENERATED_FILES) $(pc_files) $(BUILD_DIR)/*
 
-programfilesdir = $(pkglibdir)
-programfiles_DATA = $(ASSEMBLY)
+#pprogramfilesdir = $(pkglibdir)
+#programfiles_DATA = $(ASSEMBLY)
 bin_SCRIPTS = $(BINARIES)
 
 programfilescalendarsalarmdir = @libdir@/@PACKAGE@/Calendars/Alarm
 programfilescalendarsalarm_DATA = $(PROGRAMFILES_CALENDARS_ALARM)
 programfilescalendarstododir = @libdir@/@PACKAGE@/Calendars/Todo
 programfilescalendarstodo_DATA = $(PROGRAMFILES_CALENDARS_TODO)
+PROGRAMFILESdir = @libdir@/@PACKAGE@
 programfilesdir = @libdir@/@PACKAGE@
 programfiles_DATA = $(PROGRAMFILES)
 programfilescalendarsjournaldir = @libdir@/@PACKAGE@/Calendars/Journal
