ICalendar to Calendar, IICalendar to ICalendar

--- a/ical.NET/ical.NET.csproj
+++ b/ical.NET/ical.NET.csproj
@@ -208,7 +208,7 @@
     </Compile>
     <Compile Include="DataTypes\iCalDateTime.cs" />
     <Compile Include="Factory\UIDFactory.cs" />
-    <Compile Include="iCalendar.cs" />
+    <Compile Include="Calendar.cs" />
     <Compile Include="iCalendarCollection.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -242,7 +242,7 @@
     <Compile Include="Interfaces\General\ICopyable.cs" />
     <Compile Include="Interfaces\General\ILoadable.cs" />
     <Compile Include="Interfaces\General\IMergeable.cs" />
-    <Compile Include="Interfaces\IICalendar.cs" />
+    <Compile Include="Interfaces\ICalendar.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <None Include="packages.config" />
     <None Include="Properties\AssemblyInfo.cs.template" />
