ICalTimeZone represents a VTimeZone, so call it that

--- a/ical.NET/ical.NET.csproj
+++ b/ical.NET/ical.NET.csproj
@@ -84,7 +84,7 @@
   <ItemGroup>
     <Compile Include="Components\Alarm.cs" />
     <Compile Include="Components\FreeBusy.cs" />
-    <Compile Include="Components\iCalTimeZone.cs" />
+    <Compile Include="Components\VTimeZone.cs" />
     <Compile Include="Components\iCalTimeZoneInfo.cs" />
     <Compile Include="Components\Journal.cs" />
     <Compile Include="DataTypes\Attachment.cs" />
