--- a/v2/ical.net/ical.net/ical.net.csproj
+++ b/v2/ical.net/ical.net/ical.net.csproj
@@ -48,7 +48,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="VEvent.cs" />
+    <Compile Include="Event.cs" />
     <Compile Include="Frequency.cs" />
     <Compile Include="RecurrenceBuilder.cs" />
     <Compile Include="RecurrenceCalculator.cs" />
